# VertexVista

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  taskfile.yml
adjacency-tree/: CMakeLists.txt  README.md  adjtree.cpp  adjtree.hpp
adjacency-tree/src/: adjtree.cpp  adjtree.hpp  rbtree.hpp  rbtree.ipp  set.hpp
digraph/: CMakeLists.txt  README.md  digraph-traverse.cpp  digraph-traverse.hpp  digraph.cpp  digraph.hpp  graph-traverse.hpp  graph.cpp  graph.hpp  node-edge.cpp  node-edge.hpp  vertex-map.cpp  vertex-map.hpp
digraph-processing/: CMakeLists.txt  strong-connectivity.hpp
docs/: Graph.md  GraphRoutines.md
graph/: CMakeLists.txt  digraph.cpp  digraph.hpp  graph.cpp  graph.hpp  node-edge.cpp  node-edge.hpp  vertex-map.cpp  vertex-map.hpp
graph-processing/: CMakeLists.txt
graph-routines/: CMakeLists.txt  bipartite.cpp  bipartite.hpp  connected-component.cpp  connected-component.hpp  connected-components.cpp  connected-components.hpp  cycle.cpp  cycle.hpp  eulerian.cpp  eulerian.hpp  graph-traverse.cpp  graph-traverse.hpp  paths.cpp  paths.hpp  traversal.cpp  traversal.hpp
linked-list/: CMakeLists.txt  linked-list.cpp  linked-list.hpp
tests/: CMakeLists.txt  adjtree-tests.cpp  digraph-tests.cpp  digraph-traverse-tests.cpp  graph-paths-tests.cpp  graph-tests.cpp  graph-traversal-tests.cpp  graph-traverse-tests.cpp  linked-list-tests.cpp  main.cpp  routine-tests.cpp  tests.cpp  uf-tests.cpp  vertex-map-tests.cpp
utils/: deque.hpp  uf.hpp
